--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="./loader.svg" alt="Loading">
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container">
+        
     </div>
 <!-- JS Script -->
 <script src="./script.js"></script>
